fix pointer events on burst image to prevent it from covering clickable content

--- a/client/src/scss/_images.scss
+++ b/client/src/scss/_images.scss
@@ -9,4 +9,5 @@ img + img.burst {
   transform: translate(-50%, -50%);
   display: block;
   z-index: -1;
+  pointer-events: none;
 }
